# RAG

./: pyproject.toml  requirements.txt
data/ingestion_processed/: serialized_chapter.json  serialized_chapter_summaries.json  serialized_quotes_documents.json
main/: NTBK_LangChain_Basics.ipynb  NTBK_PDFProcessing.ipynb  NTBK_RestructuringData.ipynb  NTBK_RetrieverConstruct.ipynb  langchain-chatbots-memory.ipynb
