[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-mongodb>=0.7.0",
    "langchain-openai>=0.3.33",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pymongo>=4.15.1",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
]
